Added more styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <link rel="stylesheet" href="main.css">
+ <title>This is a template</title>
+<style>
+            .funky {
+                background-color: #1b896c;
+                color: #29be29;
+            }
 
-  <title>This is a template</title>
+            #funkyID {
+                background-color: #bc1ab6;
+                color: #39de39;
+            }
+</style>
+    
 
 </head>
-
+    <h1>This is a heading 1</h1>
 <body>
-This is the body. 
+<p id="funkyID">This is not a normal paragraph</p>
+        <p class="funky">This is a normal paragraph</p>
+        <p class="funky">This is another normal paragraph</p>
 </body>
 </html>
